service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-minio-service
spec:
  selector:
    app: python-minio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
