route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-python-route
spec:
  host: minio-python-route-minio-python.apps.okd4.smartstream-stp.com
  port:
    targetPort: 5000
  to:
    kind: Service
    name: python-minio-service
    weight: 100
  wildcardPolicy: None
